--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section id="main">
     <header>
       <div class="company-name" data-aos="fade-down">
-        <img src="/assets/back.png" alt="Team Member 1" width="40" height="40" />
+        <img src="assets/back.png" alt="Team Member 1" width="40" height="40" />
         <h2>Almara Petroleum</h2>
       </div>
 
@@ -757,7 +757,7 @@
       height="30" /></a>
 </body>
 
-<script src="/scripts/main.js"></script>
+<script src="scripts/main.js"></script>
 <script>
   AOS.init({
     duration: 900,
