--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
         <span class="subtitle">Клиентов</span>
       </div>
 
-      <p>
-        <b>ТОО "Almara Petroleum"</b> – казахстанская компания, основанная в
-        2022 году, занимается продажей нефтепродуктов, гарантируя стабильные
-        поставки и высокий сервис.
-      </p>
+      <div class="shape-content-text">
+        <p>
+          <b>ТОО "Almara Petroleum"</b> – казахстанская компания, основанная в
+          2022 году, занимается продажей нефтепродуктов, гарантируя стабильные
+          поставки и высокий сервис.
+        </p>
+      </div>
     </div>
 
     <div class="shapes-container" data-aos="zoom-out-up">
