--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha384-..." crossorigin="anonymous">
 
-  <!-- Defer non-critical JS -->
+  <!-- AOS CSS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- AOS JS with defer -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+  <script defer>
+    document.addEventListener('DOMContentLoaded', function() {
+      AOS.init({
+        duration: 900,
+        disable: 'mobile',
+        startEvent: 'DOMContentLoaded',
+        offset: 50
+      });
+    });
+  </script>
+
 </head>
 
 <body>
@@ -774,14 +788,4 @@
 </body>
 
 <script src="scripts/main.js"></script>
-<script>
-  AOS.init({
-  duration: 900,
-  once: true,
-  disable: 'mobile', // Disable on mobile devices
-  startEvent: 'DOMContentLoaded',
-  offset: 50
-});
-</script>
-
 </html>
