--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <img src="assets/fade1.jpg" alt="Grid Image 2" />
       </div>
       <div class="photo-item" data-aos="fade-up" data-aos-delay="200">
-        <img src="assets/fade2.jpg" alt="Grid Image 3" />
+        <img src="assets/fadec2.jpg" alt="Grid Image 3" />
       </div>
       <div class="photo-item tall" data-aos="fade-up" data-aos-delay="300">
         <img src="assets/fade7.jpg" alt="Grid Image 4" />
@@ -412,7 +412,7 @@
             <img src="assets/img6.jpg" alt="charity" data-aos="fade-up-right">
           </div>
           <div class="gallery-item">
-            <img src="assets/img2.jpg" alt="charity"
+            <img src="assets/imgc2.jpg" alt="charity"
               style="width: 100%; height: 250px; object-fit: cover; border-radius: 8px;" data-aos="fade-up-left">
           </div>
           <div class="gallery-item2">
