--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Almara Petroleum - ведущий нефтяной оператор Казахстана">
   <meta name="keywords" content="нефть, petroleum, kazakhstan, almara">
-
+  <meta name="description"
+    content="ТОО Almara Petroleum - ведущая казахстанская компания по продаже нефтепродуктов. Гарантируем стабильные поставки и высокий сервис с 2022 года." />
+  <meta name="keywords" content="нефтепродукты, Казахстан, Almara Petroleum, поставки нефтепродуктов" />
+  <meta property="og:title" content="Almara Petroleum - Продажа нефтепродуктов в Казахстане" />
+  <meta property="og:description" content="Надежные поставки нефтепродуктов с высоким уровнем сервиса" />
+  <meta property="og:image" content="assets/main3.jpg" />
   <title>Almara Petroleum - Ведущий нефтяной оператор Казахстана</title>
 
   <!-- Preload critical assets -->
@@ -24,7 +29,7 @@
   <!-- AOS JS with defer -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
   <script defer>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       AOS.init({
         duration: 900,
         disable: 'mobile',
@@ -50,7 +55,7 @@
         <a href="#partnerships" onclick="scrollToFeatures()" role="button" data-translate="partnerships">Партнерства</a>
         <a href="#experts" onclick="scrollToExperts()" role="button" data-translate="experts">Эксперты</a>
         <a href="#products" onclick="scrollToReviews()" role="button" data-translate="products">Продукты</a>
-        
+
         <!-- Add language switcher -->
         <div class="language-switcher">
           <button onclick="switchLanguage('ru')" class="lang-btn active" data-lang="ru">RU</button>
@@ -59,7 +64,8 @@
         </div>
       </nav>
 
-      <button type="button" data-aos="fade-down" onclick="scrollToFooter()" aria-label="Связаться с нами" data-translate="contact">
+      <button type="button" data-aos="fade-down" onclick="scrollToFooter()" aria-label="Связаться с нами"
+        data-translate="contact">
         Связаться с нами
       </button>
     </header>
@@ -89,7 +95,8 @@
     </div>
 
     <div class="photo-grid">
-      <div class="photo-item large blur-load" data-aos="fade-up" style="background-image: url('assets/main3-small.jpg')">
+      <div class="photo-item large blur-load" data-aos="fade-up"
+        style="background-image: url('assets/main3-small.jpg')">
         <img src="assets/main3.jpg" alt="Grid Image 1" loading="lazy" />
       </div>
       <div class="photo-item" data-aos="fade-up" data-aos-delay="100">
@@ -116,12 +123,12 @@
     <div class="about-content" data-aos="zoom-in-up">
       <div class="shape shape-4" data-aos="zoom-out-up">
         <span class="shape-title">1070+</span>
-        <span class="subtitle" data-translate="clients" >Клиентов</span>
+        <span class="subtitle" data-translate="clients">Клиентов</span>
       </div>
 
       <div class="shape-content-text">
         <p data-translate="company_description">
-          <b >ТОО "Almara Petroleum"</b> – казахстанская компания, основанная в
+          <b>ТОО "Almara Petroleum"</b> – казахстанская компания, основанная в
           2022 году, занимается продажей нефтепродуктов, гарантируя стабильные
           поставки и высокий сервис.
         </p>
@@ -382,26 +389,31 @@
             организаций и отдельных нуждающихся граждан.
 
           <h4 data-aos="fade-up" data-translate="ch1">Поддержка образования</h4>
-          <p data-aos="fade-up" data-translate="ch11">Образование – ключ к будущему, и мы стремимся создать благоприятные условия для
+          <p data-aos="fade-up" data-translate="ch11">Образование – ключ к будущему, и мы стремимся создать
+            благоприятные условия для
             обучения. В рамках нашей помощи школам были выделены средства на улучшение материально-технической базы,
             приобретение учебных материалов и поддержку образовательных программ.</p>
 
           <h4 data-aos="fade-up" data-translate="ch2">Благоустройство мечетей</h4>
-          <p data-aos="fade-up" data-translate="ch22">Духовное развитие общества играет важную роль в его гармоничном развитии. Мы оказали
+          <p data-aos="fade-up" data-translate="ch22">Духовное развитие общества играет важную роль в его гармоничном
+            развитии. Мы оказали
             финансовую помощь мечетям, направленную на ремонт, благоустройство и проведение мероприятий, способствующих
             духовному воспитанию и просвещению.</p>
 
           <h4 data-aos="fade-up" data-translate="ch3">Помощь малоимущим и социально уязвимым слоям населения</h4>
-          <p data-aos="fade-up" data-translate="ch33">Особое внимание уделяется малоимущим семьям, людям с ограниченными возможностями и
+          <p data-aos="fade-up" data-translate="ch33">Особое внимание уделяется малоимущим семьям, людям с ограниченными
+            возможностями и
             социально незащищенным слоям населения. Финансовая поддержка направлена на улучшение их жизненных условий,
             приобретение необходимых товаров и продуктов питания.</p>
 
           <h4 data-aos="fade-up" data-translate="ch4">Индивидуальная помощь</h4>
-          <p data-aos="fade-up" data-translate="ch44">Мы также оказываем поддержку физическим лицам, оказавшимся в сложных жизненных
+          <p data-aos="fade-up" data-translate="ch44">Мы также оказываем поддержку физическим лицам, оказавшимся в
+            сложных жизненных
             ситуациях. Это может быть помощь в лечении, покрытие неотложных расходов или поддержка в трудный период
             жизни.</p>
 
-          <p data-aos="fade-up" style="color:black" data-translate="ch5"><b> <i> Мы продолжим нашу работу, стремясь к созданию лучшего
+          <p data-aos="fade-up" style="color:black" data-translate="ch5"><b> <i> Мы продолжим нашу работу, стремясь к
+                созданию лучшего
                 будущего для общества, помогая
                 тем, кто действительно в этом нуждается.</i></b></p>
           </p>
@@ -603,7 +615,7 @@
         <div class="card">
           <div class="card-image" style="background-image: url('assets/kc.png'); background-size:auto;"></div>
           <div class="card-content">
-            <div class="card-date"data-translate="p1">ТОО "KC Energy Group"</div>
+            <div class="card-date" data-translate="p1">ТОО "KC Energy Group"</div>
             <div class="card-title" data-translate="p11">
               Лидер в области энергетических решений, обеспечивающий устойчивое развитие и инновационные технологии.
             </div>
@@ -614,7 +626,8 @@
           <div class="card-image" style="background-image: url('assets/Kazmunaigas.jpg')"></div>
           <div class="card-content">
             <div class="card-date" data-translate="p2">АО "Национальная Компания КазМунайГаз"</div>
-            <div class="card-title" data-translate="p22">Крупнейшая нефтегазовая компания Казахстана, определяющая стратегию развития
+            <div class="card-title" data-translate="p22">Крупнейшая нефтегазовая компания Казахстана, определяющая
+              стратегию развития
               отрасли. </div>
           </div>
         </div>
@@ -623,7 +636,8 @@
           <div class="card-image" style="background-image: url('assets/sinopec.jpg')"></div>
           <div class="card-content">
             <div class="card-date" data-translate="p3">ТОО "Синопек Казахстан Энерджи"</div>
-            <div class="card-title" data-translate="p33">Часть глобальной корпорации Sinopec, специализируется на переработке и сбыте
+            <div class="card-title" data-translate="p33">Часть глобальной корпорации Sinopec, специализируется на
+              переработке и сбыте
               нефтепродуктов.
             </div>
           </div>
@@ -633,7 +647,8 @@
           <div class="card-image" style="background-image: url('assets/jasyl.jpeg')"></div>
           <div class="card-content">
             <div class="card-date" data-translate="p4">ТОО «Jasyl Energy»</div>
-            <div class="card-title" data-translate="p44">Экологически ориентированная компания, развивающая проекты в сфере альтернативной
+            <div class="card-title" data-translate="p44">Экологически ориентированная компания, развивающая проекты в
+              сфере альтернативной
               энергетики.
             </div>
           </div>
@@ -643,7 +658,8 @@
           <div class="card-image" style="background-image: url('assets/kaspi.png')"></div>
           <div class="card-content">
             <div class="card-date" data-translate="p5">ТОО "Каспий нефть трейдинг"</div>
-            <div class="card-title" data-translate="p55">Ключевой игрок в области нефтяной логистики и торговли на Каспийском рынке. </div>
+            <div class="card-title" data-translate="p55">Ключевой игрок в области нефтяной логистики и торговли на
+              Каспийском рынке. </div>
           </div>
         </div>
 
@@ -651,7 +667,8 @@
           <div class="card-image" style="background-image: url('assets/citic.jpg')"></div>
           <div class="card-content">
             <div class="card-date" data-translate="p6">CITIC Construction Co.,Ltd</div>
-            <div class="card-title" data-translate="p66">Компания CITIC Construction в Казахстане специализируется на строительстве и ремонте
+            <div class="card-title" data-translate="p66">Компания CITIC Construction в Казахстане специализируется на
+              строительстве и ремонте
               дорог.</div>
           </div>
         </div>
@@ -660,7 +677,8 @@
           <div class="card-image" style="background-image: url('assets/midas.png')"></div>
           <div class="card-content">
             <div class="card-date" data-translate="p7">СП Сине Мидас Строй ТОО</div>
-            <div class="card-title" data-translate="p77">была создана в 2006 году и является одной из ведущих строительных компаний,
+            <div class="card-title" data-translate="p77">была создана в 2006 году и является одной из ведущих
+              строительных компаний,
               работающих в области дорожного строительства. </div>
           </div>
         </div>
@@ -771,7 +789,8 @@
           <h4 data-translate="footer_contacts">Контакты</h4>
           <p><a href="mailto:almara.petroleum@bk.ru">Email: almara.petroleum@bk.ru</a></p>
           <p><a href="https://wa.me/+77017076707" data-translate="footer_phone">Телефон: +7 701 707 67 07</a></p>
-          <p><a href="https://go.2gis.com/u7yPU" target="_blank" data-translate="footer_address">Адрес: Казахстан, г. Астана, ул. Байтурсынова,5, блок
+          <p><a href="https://go.2gis.com/u7yPU" target="_blank" data-translate="footer_address">Адрес: Казахстан, г.
+              Астана, ул. Байтурсынова,5, блок
               D6, н.п 45</a></p>
           <p class="social-link">
             <a href="https://www.instagram.com/almara.petroleum/" target="_blank">
@@ -793,4 +812,5 @@
 
 <script src="scripts/main.js"></script>
 <script src="scripts/translations.js"></script>
+
 </html>
