--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h1 data-translate="hero_title">Будущее начинается с энергии</h1>
       <p data-translate="hero_description">
         Almara Petroleum - ведущий нефтяной оператор Казахстана,
-        специализирующийся на продаже и доставке нефти и нефтепродуктов.
+        специализирующийся на продаже и доставке нефтепродуктов.
       </p>
 
       <div class="actions" data-aos="fade-up">
@@ -770,7 +770,7 @@
           <h4>Almara Petroleum</h4>
           <p data-translate="footer_description">
             Ведущий нефтяной оператор Казахстана, специализирующийся на
-            продаже и доставке нефти и нефтепродуктов.
+            продаже и доставке нефтепродуктов.
           </p>
         </div>
 
