--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         Almara Petroleum - ведущий нефтяной оператор Казахстана,
         специализирующийся на продаже и доставке нефтепродуктов.
       </p>
-
+      <!-- test comment -->
       <div class="actions" data-aos="fade-up">
         <button onclick="scrollToAbout()" data-translate="learn_more">Узнать больше</button>
         <button onclick="scrollToFooter()" data-translate="contact">Связаться с нами</button>
