--- a/index.html
+++ b/index.html
@@ -546,11 +546,7 @@
           <h2 data-translate="name1">Досымов Алмат</h2>
           <p data-translate="job1">Директор компаний</p>
           <p class="text-info" data-translate="text1">
-            Более 18 летний опыт работы
-            Руководил командой свыше 50+ человек
-            Заключил контракты с
-            крупнейшими игроками отрасли
-            в Казахстане
+            Более 18 летний опыт работы, руководил командой свыше 50+ человек, заключил контракты с крупнейшими игроками отрасли в Казахстане
           </p>
         </div>
       </div>
@@ -563,9 +559,7 @@
           <h2 data-translate="name2">Турибаев Ильяс</h2>
           <p data-translate="job2">Заместитель директора продажы ГСМ </p>
           <p class="text-info" data-translate="text2">
-            Успешно работал в компаниях (КазМунайГаз, Гелиос, Газпромнефть)
-            Внедрил аналитические инструменты, повысившие эффективность работы на
-            80%.
+            Успешно работал в компаниях (КазМунайГаз, Гелиос, Газпромнефть), внедрил аналитические инструменты повысившие эффективность работы на 80%.
           </p>
         </div>
       </div>
@@ -579,9 +573,7 @@
           <h2 data-translate="name3">Гулназ Нурланқызы</h2>
           <p data-translate="job3">Руководитель Отдела Продаж </p>
           <p class="text-info" data-translate="text3">
-            Обеспечила прибыльность в новых регионах
-            Увеличила объем продаж на 100%
-            Расширила клиентскую базу на 98%
+            Обеспечила прибыльность в новых регионах, увеличила объем продаж на 100%, расширила клиентскую базу на 98%
           </p>
         </div>
       </div>
@@ -595,9 +587,7 @@
           <h2 data-translate="name4">Тлеулиев Бауржан</h2>
           <p data-translate="job4">Коммерческий директор</p>
           <p class="text-info" data-translate="text4">
-            Оптимизировал расходы компании за 3 года на 10%
-            Запустил программу повышения квалификации сотрудников, поднявший
-            уровень удовлетворенности персонала на 55%
+            Оптимизировал расходы компании за 3 года на 10%, запустил программу повышения квалификации сотрудников, поднявший уровень удовлетворенности персонала на 55%
           </p>
         </div>
       </div>
